# yolo-nas

./: .gitignore  README.md  buckets-for-weights.md  pyproject.toml  requirements.txt  smoke-test.py  train_coco_yolo_nas.py  train_custom_yolo_nas.py
configs/: coco_dataset_config.yaml  dataset_config.yaml  training_config.yaml
scripts/: convert_cvat_to_yolo.py  organize_coco_export.py
