[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-nas"
version = "0.1.0"
description = "YOLO-NAS project with fixed bucket URLs for pre-trained weights"
requires-python = ">=3.10"
dependencies = [
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "super-gradients>=3.4.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
